# apps/api/interfaces/guide_views_usecase.go
@@ -1,16 +1,0 @@
-package interfaces
-
-import (
-	"context"
-	"time"
-
-	"github.com/google/uuid"
-
-	authulamodels "github.com/Authula/authula/models"
-)
-
-type GuideViewsUseCase interface {
-	RecordView(ctx context.Context, actor *authulamodels.Actor, guideID uuid.UUID, ipHash, userAgent, viewedAt string) error
-	GetViewCount(ctx context.Context, actor *authulamodels.Actor, teamID uuid.UUID) (int, error)
-	GetTimeSaved(ctx context.Context, actor *authulamodels.Actor, teamID uuid.UUID, since *time.Time) (int, error)
-}
